debug_lightning.log
Starting require lightningcss...
Error requiring lightningcss: C:\kurlybrains-dashboard\node_modules\lightningcss\node\index.js:19
} catch (err) {
  ^^^^^

SyntaxError: Unexpected token 'catch'
    at wrapSafe (node:internal/modules/cjs/loader:1692:18)
    at Module._compile (node:internal/modules/cjs/loader:1735:20)
    at Object..js (node:internal/modules/cjs/loader:1893:10)
    at Module.load (node:internal/modules/cjs/loader:1481:32)
    at Module._load (node:internal/modules/cjs/loader:1300:12)
    at TracingChannel.traceSync (node:diagnostics_channel:328:14)
    at wrapModuleLoad (node:internal/modules/cjs/loader:245:24)
    at Module.require (node:internal/modules/cjs/loader:1504:12)
    at require (node:internal/modules/helpers:152:16)
    at Object.<anonymous> (C:\kurlybrains-dashboard\test_lightning.js:8:5)
Starting require lightningcss...
Success requiring lightningcss
